:construction: cleanup and document processor