@@ -3,10 +3,8 @@ package com.github.ryandens.delegation;
 import com.google.auto.common.MoreElements;
 import com.google.auto.common.MoreTypes;
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableSet;
 
 import javax.annotation.processing.AbstractProcessor;
-import javax.annotation.processing.Completion;
 import javax.annotation.processing.Filer;
 import javax.annotation.processing.Messager;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -26,7 +24,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.google.auto.common.AnnotationMirrors.getAnnotationValue;
-import static com.google.common.collect.ImmutableSet.toImmutableSet;
 
 /** TODO */
 @AutoService(Processor.class)
@@ -50,6 +47,8 @@ public final class AutoDelegateProcessor extends AbstractProcessor {
         roundEnv.getElementsAnnotatedWith(AutoDelegate.class);
     //
     for (final Element element : autoDelegateElements) {
+      // First, get an AnnotationMirror off the element annotated with AutoDelegate. This can be
+      // thought of as an "instance" of an annotation
       final var annotationMirror =
           MoreElements.getAnnotationMirror(element, AutoDelegate.class)
               .toJavaUtil()
@@ -57,15 +56,22 @@ public final class AutoDelegateProcessor extends AbstractProcessor {
                   () ->
                       new IllegalStateException(
                           "element should always be annotated with AutoDelegate"));
-      final var apisToDelegate = getValueFieldOfClasses(annotationMirror);
-      //      final var elementsToDelegate =
-      //          apisToDelegate.stream()
-      //              .map(DeclaredType::asElement)
-      //              .filter(declaredTypeElement -> declaredTypeElement instanceof TypeElement)
-      //              .map(e -> (TypeElement) e)
-      //              .collect(Collectors.toSet());
+      // From the AnnotationMirror, get the value of AutoDelegate#apisToDelegate and translate it
+      // into a Set<Element>
+      final var apisToDelegate = getApisToDelegateFromAnnotationMirror(annotationMirror);
+      // from the Element annotated with AutoDelegate, get their declared interfaces. Find all the
+      // interfaces that are declared on the class that are also specified as delegation targets in
+      // AutoDelegate#apisToDelegate
+      final var type =
+          (((TypeElement) element)
+              .getInterfaces().stream()
+                  .map(typeMirror -> (DeclaredType) typeMirror)
+                  .filter(declaredType -> apisToDelegate.contains(declaredType.asElement()))
+                  .findFirst() // TODO for now, only one interface to auto-delegate is supported
+                  .get());
 
-      final var type = ((DeclaredType) ((TypeElement) element).getInterfaces().get(0));
+      // From the type we are auto-delegating to find all abstract ExecutableElements defined on the
+      // interface and collect them into a set of ExecutableElements
       final var memberElements =
           processingEnv.getElementUtils().getAllMembers((TypeElement) type.asElement()).stream()
               .filter(
@@ -73,36 +79,18 @@ public final class AutoDelegateProcessor extends AbstractProcessor {
               .filter(typeElementMember -> typeElementMember instanceof ExecutableElement)
               .map(typeElementMember -> (ExecutableElement) typeElementMember)
               .collect(Collectors.toSet());
-      //      final var memberElements = new HashSet<ExecutableElement>();
-      //      for (TypeElement typeElement : elementsToDelegate) {
-      //        final List<? extends ExecutableElement> members =
-      //            processingEnv.getElementUtils().getAllMembers(typeElement).stream()
-      //                .filter(
-      //                    typeElementMember ->
-      //                        typeElementMember.getModifiers().contains(Modifier.ABSTRACT))
-      //                .filter(typeElementMember -> typeElementMember instanceof ExecutableElement)
-      //                .map(typeElementMember -> (ExecutableElement) typeElementMember)
-      //                .collect(Collectors.toList());
-      //        memberElements.addAll(members);
-      //      }
+      // Get the package of the element annotated with AutoDelegate, as the
+      final var destinationPackageName =
+          MoreElements.getPackage(element).getQualifiedName().toString();
       new AutoDelegateWriter(
               filer,
-              "com.github.ryandens.examples",
-              "AutoDelegate_InstrumentedSet",
+              destinationPackageName,
+              "AutoDelegate_" + element.getSimpleName(),
               memberElements,
               type)
           .write();
     }
     return false;
-  }
-
-  @Override
-  public Iterable<? extends Completion> getCompletions(
-      final Element element,
-      final AnnotationMirror annotation,
-      final ExecutableElement member,
-      final String userText) {
-    return null;
   }
 
   @Override
@@ -114,23 +102,20 @@ public final class AutoDelegateProcessor extends AbstractProcessor {
    * Returns the contents of a {@code Class[]}-typed "value" field in a given {@code
    * annotationMirror}.
    */
-  private ImmutableSet<DeclaredType> getValueFieldOfClasses(AnnotationMirror annotationMirror) {
+  private Set<Element> getApisToDelegateFromAnnotationMirror(AnnotationMirror annotationMirror) {
     return getAnnotationValue(annotationMirror, "apisToDelegate")
         .accept(
-            new SimpleAnnotationValueVisitor8<ImmutableSet<DeclaredType>, Void>() {
+            new SimpleAnnotationValueVisitor8<Set<Element>, Void>() {
               @Override
-              public ImmutableSet<DeclaredType> visitType(TypeMirror typeMirror, Void v) {
-                // TODO(ronshapiro): class literals may not always be declared types, i.e.
-                // int.class, int[].class
-                return ImmutableSet.of(MoreTypes.asDeclared(typeMirror));
+              public Set<Element> visitType(TypeMirror typeMirror, Void v) {
+                return Set.of(MoreTypes.asDeclared(typeMirror).asElement());
               }
 
               @Override
-              public ImmutableSet<DeclaredType> visitArray(
-                  List<? extends AnnotationValue> values, Void v) {
+              public Set<Element> visitArray(List<? extends AnnotationValue> values, Void v) {
                 return values.stream()
                     .flatMap(value -> value.accept(this, null).stream())
-                    .collect(toImmutableSet());
+                    .collect(Collectors.toSet());
               }
             },
             null);
